welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:3: error: not found: value a
  if (a%10<=2) {
      ^nearTen:6: error: not found: value a
  if (a%10>=8) {
      ^